# LayraPS4

./: CMakeLists.txt  README.md
cmake/: FindSDL3.cmake
docs/: Input_Device_Design.md  PKG_Design.md  Project_Structure.md  README.md  RPCS3_Disney_Infinity_Wiki.md  UI_UX_Design.md  VFS_Design.md  implementation_report.md
include/: layra_vfs.h  layra_vulkan.h
lib/: layra_pkg.h
lib/resources/: layralogo.rc
src/: cpuemulator.cpp  cpuemulator.h  emulator.cpp  emulator.h  gpuemulator.cpp  gpuemulator.h  ioemulator.cpp  ioemulator.h  main.cpp  memorymanager.cpp  memorymanager.h  sdl_window.cpp  sdl_window.h
src/boot/: bootscreen.cpp  bootscreen.h
src/common/: config.cpp  config.h  discord_rpc_handler.cpp  discord_rpc_handler.h  io_file.cpp  log.cpp  log.h  path_util.cpp  path_util.h  types.h
src/core/: core.cpp  core.h
src/core/libraries/network/: net.cpp  net.h  net_util.cpp  net_util.h  p2p_sockets.cpp  posix_sockets.cpp  sockets.h  sys_net.cpp  unix_sockets.cpp
src/core/libraries/np/: np_auth.cpp  np_auth.h
src/core/networking/: networking.cpp  networking.h
src/core/pkg/: layra_pkg.c
src/core/vfs/: layra_vfs.c  test_vfs.cpp
src/drivers/: drivers.cpp  drivers.h
src/filesystem/: filesystem.cpp  filesystem.h
src/graphics/: graphics.cpp  graphics.h
src/input/: input.cpp  input.h
src/video/: layra_vulkan.cpp
